@@ -31,7 +31,7 @@ void gtk_acpi::get_values()
 void gtk_acpi::get_ac_adapter()
 {
   std::string s1,s2;
-  ifstream fin("/proc/acpi/ac_adapter/state");
+  ifstream fin("/proc/acpi/ac_adapter/0/status");
   if(!fin.good()) {
      fin.close();
      fin.open("/proc/acpi/ac_adapter/ACAD/state");   
