@@ -1,4 +1,4 @@
-// generated 2002/12/12 9:13:55 CET by thoma@Tiger.(none)
+// generated 2002/12/12 11:36:51 CET by thoma@Tiger.(none)
 // using glademm V1.1.2a_cvs
 //
 // DO NOT EDIT THIS FILE ! It was created using
@@ -100,7 +100,7 @@ gtk_acpi_glade::gtk_acpi_glade(
    table2->attach(*label_load_, 0, 1, 1, 2, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
    table2->attach(*label_bat1, 1, 4, 3, 4, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
    table2->attach(*label_bat1_, 0, 1, 3, 4, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
-   table2->attach(*label1, 2, 3, 0, 2, GTK_SHRINK, GTK_SHRINK, 0, 0);
+   table2->attach(*label1, 2, 3, 0, 2, GTK_FILL, GTK_EXPAND, 0, 0);
    frame_label->set_shadow_type(GTK_SHADOW_NONE);
    frame_label->set_label_align(0,0);
    frame_label->add(*table2);
