@@ -109,3 +109,12 @@
 
 2002/12/12 9:13:55 CET
 	update files from .glade file
+
+2002/12/12 11:00:16 CET
+	update files from .glade file
+
+2002/12/12 11:02:06 CET
+	update files from .glade file
+
+2002/12/12 11:36:51 CET
+	update files from .glade file
